<resources>
    <string name="app_name">Islamic App</string>
    <string name="kalma">Kalma</string>
    <string name="dua_azakar">Dua(s)</string>
    <string name="prayer_time">Prayer Time</string>
    <string name="date_conversion">Date Conv.</string>
    <string name="dashboard_wallpaper">Dashboard wallpaper</string>
    <string name="mode">Mode</string>
    <string name="quran">Quran</string>
    <string name="select_cast">Select Cast</string>
    <string name="select_item">Select Item</string>
    <string name="click_me">Click me</string>
    <string name="geogian_date">Enter date ac to georgian calender</string>
    <string name="check">Check</string>
    <string name="hijri_date">Enter date ac to Hijri</string>
</resources>