<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6A4BBDB3"
        tools:context=".fragments.dashboard.Dashboard">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dashboard_wallpaper"
            android:padding="20dp"
            android:scaleType="fitStart"
            android:src="@drawable/dash"
            app:layout_constraintBottom_toBottomOf="@+id/prayer"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/prayer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/prayer_time"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img1"

            />

        <Button
            android:id="@+id/dateCon"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/date_conversion"
            android:textSize="12sp"

            app:layout_constraintLeft_toRightOf="@id/prayer"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img1" />

        <Button
            android:id="@+id/dua"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/dua_azakar"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prayer"

            />

        <Button
            android:id="@+id/kalma"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/kalma"
            android:textSize="12sp"

            app:layout_constraintLeft_toRightOf="@id/dua"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateCon" />

        <Button
            android:id="@+id/quran"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/quran"
            android:textSize="12sp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dua"

            />

        <Button
            android:id="@+id/mode"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/mode"
            android:textSize="12sp"
            app:layout_constraintLeft_toRightOf="@id/quran"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kalma" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>